# cpp-matrix-library

./: README.md  README_RUS.md
src/: CMakeLists.txt  Makefile  s21_matrix_oop.cc  s21_matrix_oop.h  test.cc
src/tests/: test_base.cc  test_operation.cc
